load schedule data to payment

--- a/web/index.html
+++ b/web/index.html
@@ -2961,7 +2961,7 @@
 
             <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto" class="table-responsive text-nowrap">
 
-                <table class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
+                <table class="tblSchedule table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Schedule Id</th>
@@ -2978,111 +2978,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
+
                     </tbody>
                 </table>
 
@@ -3113,7 +3009,7 @@
 
             <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto" class="table-responsive text-nowrap">
 
-                <table class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
+                <table id="tblPayment" class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Payment Id</th>
@@ -4014,7 +3910,7 @@
 
             <div style="width: 98vw; height: 61vh;position: relative; top: 80px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table  " style="position: relative;left: 0;top: 0">
+                <table class="tblSchedule table align-middle mb-0 bg-white table  " style="position: relative;left: 0;top: 0">
                     <thead class="bg-light">
                     <tr>
                         <th>Schedule Id</th>
@@ -4031,111 +3927,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            S00-0001
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            D00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
-                        </td>
-                    </tr>
+
                     </tbody>
                 </table>
 
